nginx/k8s/ingress-nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-all-server-app
  namespace: nginx 

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - http: 
         paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend: 
              service:
                name: server-app-service
                port:
                  number: 9000
